<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_yellow"
    android:orientation="vertical"
    tools:context=".ui.LogInAndRegistration.LogIn">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/needy_logo"
        android:contentDescription="@string/need_logo" />

    <EditText
        android:id="@+id/logInEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:textColorHint="@color/dark_grey_elements"
        android:textColor="@color/dark_grey_elements"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/logInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:textColorHint="@color/dark_grey_elements"
        android:textColor="@color/dark_grey_elements"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:clickable="true"
        android:textColor="@color/dark_grey_elements"
        android:gravity="center_horizontal"
        android:text="@string/forget_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="70dp"
        android:background="@drawable/button_design"
        android:text="@string/log_in"
        android:textColor="@color/dark_grey_elements"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/dark_grey_elements"
            android:text="@string/not_a_member" />

        <TextView
            android:id="@+id/join_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:textColor="@color/dark_grey_elements"
            android:clickable="true"
            android:text="@string/join_now" />
    </LinearLayout>

</LinearLayout>