<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/please_complete_your_profile_information"
        android:textColor="@color/primaryTextColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="108dp"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/need_logo"
        android:src="@drawable/needy_logo" />


    <EditText
        android:id="@+id/Phone_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/profile_phone_number"
        android:inputType="phone"
        android:textColor="@color/dark_grey_elements"
        android:textColorHint="@color/dark_grey_elements" />

    <EditText
        android:id="@+id/City_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/city"
        android:inputType="textPersonName"
        android:textColor="@color/dark_grey_elements"
        android:textColorHint="@color/dark_grey_elements" />

    <EditText
        android:id="@+id/zip_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/zip_code"
        android:inputType="number"
        android:textColor="@color/dark_grey_elements"
        android:textColorHint="@color/dark_grey_elements" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/confirm_button_dialog"
        android:layout_width="160dp"
        android:layout_height="49dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_design"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@color/dark_grey_elements"
        android:textSize="16sp"
        android:textStyle="bold" />


</LinearLayout>