<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darker_yellow">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="366dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/your_profile"
        android:textSize="24sp"
        android:textColor="@color/darker_grey_elements"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNameTextView"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:text="@string/name"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileAddressTextView"
        android:layout_width="243dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="92dp"
        android:text="@string/profile_address"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileZipcodeTextView"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/profile_zipcode"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profilePhoneNumTextView"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:text="@string/profile_phone_number"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileEmailTextView"
        android:layout_width="143dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="200dp"
        android:text="@string/profile_email"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePicimageView"
        android:layout_width="100dp"
        android:layout_height="103dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:srcCompat="@drawable/anonymous_mask" />

    <Button
        android:id="@+id/profileEditButton"
        android:layout_width="80dp"
        android:layout_height="37dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/profile_edit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
