<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:background="@color/darker_yellow">

    <TextView
        android:id="@+id/labelCityTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="190dp"
        android:text="@string/profile_address"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AuthorNameTextView" />

    <TextView
        android:id="@+id/labelZipcodeTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/profile_zipcode"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelCityTextView" />

    <TextView
        android:id="@+id/labelPhoneNumberTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:text="@string/profile_phone_number"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelZipcodeTextView" />

    <TextView
        android:id="@+id/labelRatingTextView"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        android:text="@string/rating_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPhoneNumberTextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/authCityTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="190dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/labelCityTextView"
        app:layout_constraintTop_toBottomOf="@+id/authLastNameTextView" />

    <TextView
        android:id="@+id/authZipTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/labelZipcodeTextView"
        app:layout_constraintTop_toBottomOf="@+id/authCityTextView" />

    <TextView
        android:id="@+id/authPhoneTextView"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/labelPhoneNumberTextView"
        app:layout_constraintTop_toBottomOf="@+id/authZipTextView" />

    <TextView
        android:id="@+id/AuthorNameTextView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:text="@string/volunteer_name"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authFirstNameTextView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:hint="@string/profile_firstName"
        android:textAlignment="viewEnd"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/AuthorNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authLastNameTextView"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:hint="@string/profile_lastName"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/authFirstNameTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <!--TODO: Rename to volunteer, not author -->

    <RatingBar
        android:id="@+id/authorRatingBar2"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelRatingTextView"
        app:layout_constraintTop_toBottomOf="@+id/authPhoneTextView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authFirstNameTextView"
        app:srcCompat="@drawable/anonymous_mask" />

</androidx.constraintlayout.widget.ConstraintLayout>